# endian

./: CMakeLists.txt  License.txt  README.md  endian.h
include/: endian.hpp
